--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
-  "bin": "index.js",
-  "name": "divarTOjson",
+  "bin": {
+    "divarTOjson": "index.js"
+  },
+  "name": "divartojson",
   "version": "1.3.0",
   "dependencies": {
     "puppeteer": "^22.3.0"
-  }
+  },
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
